[package]
name = "datetime_calculator"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "dtc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
nom = "7.1.3"
time = { version = "0.3.34", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
