[package]
name = "datetime_calculator"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "dtc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
config = "0.14.0"
home = "0.5.9"
nom = "7.1.3"
serde = { version = "1.0.197", features = ["derive"] }
time = { version = "0.3.34", features = [
    "formatting",
    "local-offset",
    "macros",
    "parsing",
    "serde",
] }

[dev-dependencies]
assert_cmd = "2.0.14"
